test/webgl/error/unknown_behavior.true
File 0, line 1, col 19 - 25:
unknown behavior "fizzle"

Fatal: unrecoverable parse error (2)
